@@ -18,6 +18,7 @@ MinimumPerl.test_finder = all_files_but_SilenceStderr
 ; to work around Test::Warnings adding an END check
 -remove = PodCoverageTests
 -remove = Test::UnusedVars
+-remove = Test::CleanNamespaces
 
 [OnlyCorePrereqs]
 :version = 0.013
